--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,19 +45,198 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Successfully imported stock data for ticker AAPL from 2021-01-01 to 2021-10-10.\n"
+      "Successfully imported stock data for ticker AAPL from 2020-01-01 to 2021-01-01.\n"
      ]
     }
    ],
    "source": [
     "stock_data, stock_ticker, start_date, end_date = get_yahoo_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "253"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(stock_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Adj Close</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2020-01-02</th>\n",
+       "      <td>75.150002</td>\n",
+       "      <td>73.797501</td>\n",
+       "      <td>74.059998</td>\n",
+       "      <td>75.087502</td>\n",
+       "      <td>135480400.0</td>\n",
+       "      <td>73.988464</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-03</th>\n",
+       "      <td>75.144997</td>\n",
+       "      <td>74.125000</td>\n",
+       "      <td>74.287498</td>\n",
+       "      <td>74.357498</td>\n",
+       "      <td>146322800.0</td>\n",
+       "      <td>73.269157</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-06</th>\n",
+       "      <td>74.989998</td>\n",
+       "      <td>73.187500</td>\n",
+       "      <td>73.447502</td>\n",
+       "      <td>74.949997</td>\n",
+       "      <td>118387200.0</td>\n",
+       "      <td>73.852974</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-07</th>\n",
+       "      <td>75.224998</td>\n",
+       "      <td>74.370003</td>\n",
+       "      <td>74.959999</td>\n",
+       "      <td>74.597504</td>\n",
+       "      <td>108872000.0</td>\n",
+       "      <td>73.505653</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-01-08</th>\n",
+       "      <td>76.110001</td>\n",
+       "      <td>74.290001</td>\n",
+       "      <td>74.290001</td>\n",
+       "      <td>75.797501</td>\n",
+       "      <td>132079200.0</td>\n",
+       "      <td>74.688072</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 High        Low       Open      Close       Volume  Adj Close\n",
+       "Date                                                                          \n",
+       "2020-01-02  75.150002  73.797501  74.059998  75.087502  135480400.0  73.988464\n",
+       "2020-01-03  75.144997  74.125000  74.287498  74.357498  146322800.0  73.269157\n",
+       "2020-01-06  74.989998  73.187500  73.447502  74.949997  118387200.0  73.852974\n",
+       "2020-01-07  75.224998  74.370003  74.959999  74.597504  108872000.0  73.505653\n",
+       "2020-01-08  76.110001  74.290001  74.290001  75.797501  132079200.0  74.688072"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stock_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2020-12-31 00:00:00\n",
+      "not in the past!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import datetime as dt\n",
+    "n = stock_data.index[-1]\n",
+    "print(n)\n",
+    "\n",
+    "lr_target_date = str(input(\"Please enter your target date you want to predict the price for (YYYY-MM-DD): \"))\n",
+    "        \n",
+    "# Check if date later than the dataframe date or if in the future\n",
+    "if dt.datetime.strptime(lr_target_date, '%Y-%m-%d').date() < stock_data.index[-1]:\n",
+    "    print(\"not in the past!\")\n",
+    "else:\n",
+    "    print(\"correct\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "while True:\n",
+    "    try:\n",
+    "        lr_days = int(input(\"How many past days do you want to consider for the linear regression? (integer) \"))\n",
+    "            \n",
+    "        # Check if number of days is between end and start date\n",
+    "        if stock_data.tail(lr_days)\n",
+    "            \n",
+    "        break\n",
+    "    \n",
+    "    except:\n",
+    "        print(\"Invalid input. Please enter your desired days as an integer. Desired days cannot exceed the data time period.\")"
    ]
   },
   {
